	  out of sequence
	- Improve runqueue code comments
	- Add task scheduler abstraction and some example schedulers
	- Improve circular dependency chain debugging code and user feedback
	- Don't give a stacktrace for invalid tasks, have a user friendly message (#3431)
	- Add support for "-e target" (#3432)
	- Fix shell showdata command (#3259)
	- Fix shell data updating problems (#1880)

Changes in Bitbake 1.8.8:
	- Rewrite svn fetcher to make adding extra operations easier 
	  as part of future SRCDATE="now" fixes
	  (requires new FETCHCMD_svn definition in bitbake.conf)
	- Change SVNDIR layout to be more unique (fixes #2644 and #2624)
	- Import persistent data store from trunk
	- Sync fetcher code with that in trunk, adding SRCREV support for svn
	- Add ConfigParsed Event after configuration parsing is complete
	- data.emit_var() - only call getVar if we need the variable
	- Stop generating the A variable (seems to be legacy code)
	- Make sure intertask depends get processed correcting in recursive depends
	- Add pn-PN to overrides when evaluating PREFERRED_VERSION
	- Improve the progress indicator by skipping tasks that have 
	  already run before starting the build rather than during it
	- Add profiling option (-P)
	- Add BB_SRCREV_POLICY variable (clear or cache) to control SRCREV cache
	- Add SRCREV_FORMAT support
	- Fix local fetcher's localpath return values
	- Apply OVERRIDES before performing immediate expansions
	- Allow the -b -e option combination to take regular expressions
	- Add plain message function to bb.msg
	- Sort the list of providers before processing so dependency problems are 
	  reproducible rather than effectively random
	- Add locking for fetchers so only one tries to fetch a given file at a given time
	- Fix int(0)/None confusion in runqueue.py which causes random gaps in dependency chains
	- Fix handling of variables with expansion in the name using _append/_prepend
	  e.g. RRECOMMENDS_${PN}_append_xyz = "abc"
	- Expand data in addtasks